tests/baselines/reference/jsxFactoryIdentifierWithAbsentParameter.errors.txt
test.tsx(9,17): error TS2552: Cannot find name 'createElement'. Did you mean 'frameElement'?


==== test.tsx (1 errors) ====
    declare module JSX {
        interface IntrinsicElements {
            [s: string]: any;
        }
    }
    
    export class AppComponent {
        render() {
            return <div />;
                    ~~~
!!! error TS2552: Cannot find name 'createElement'. Did you mean 'frameElement'?
!!! related TS2728 lib.dom.d.ts:--:--: 'frameElement' is declared here.
        }
    }
    